--- a/Task28.11Classwork/task28.11/package.json
+++ b/Task28.11Classwork/task28.11/package.json
@@ -12,7 +12,9 @@
     "debug": "~2.6.9",
     "ejs": "^3.1.5",
     "express": "~4.16.1",
+    "fetch": "^1.1.0",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node-fetch": "^2.6.1"
   }
 }
