--- a/Task08.01/package.json
+++ b/Task08.01/package.json
@@ -17,6 +17,8 @@
     "form-data": "^3.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.10",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
